@@ -1,17 +1,14 @@
 package yong.app.domain.file.file.impl;
 
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import yong.app.domain.file.file.*;
 import yong.app.domain.file.group.YongFileGroup;
 import yong.app.domain.file.group.YongFileGroupRepository;
-import yong.app.domain.notification.type.YongNotificationType;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -20,12 +17,11 @@ public class YongFileServiceImpl implements YongFileService {
 
     private final YongFileRepository yongFileRepository;
     private final YongFileGroupRepository fileGroupRepository;
-    private final ModelMapper modelMapper;
 
     @Override
     public List<YongFileVO> list() {
         List<YongFile> findAll = yongFileRepository.findAll();
-        return findAll.stream().map(yongFile -> modelMapper.map(yongFile, YongFileVO.class)).collect(Collectors.toList());
+        return findAll.stream().map(YongFileVO::new).toList();
     }
 
     @Override
@@ -56,7 +52,7 @@ public class YongFileServiceImpl implements YongFileService {
     public YongFileVO show(Long id) {
         YongFile findFile = yongFileRepository.findById(id)
                 .orElseThrow(() -> new NoSuchElementException("there is no file"));
-        return modelMapper.map(findFile, YongFileVO.class);
+        return new YongFileVO(findFile);
     }
 
     @Override
@@ -79,5 +75,10 @@ public class YongFileServiceImpl implements YongFileService {
     public void delete(Long id) {
         YongFile yongFile = yongFileRepository.findById(id).orElseThrow(() -> new NoSuchElementException("there is no file"));
         yongFileRepository.delete(yongFile);
+    }
+
+    @Override
+    public List<YongFileVO> findFilesByFileGroupId(Long fileGroupId) {
+        return yongFileRepository.findAllFilesByFileGroupId(fileGroupId);
     }
 }
